--- a/section2example/index.html
+++ b/section2example/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Location</title>
+<title>Untitled Document</title>
 <link href="jquery-mobile/jquery.mobile-1.3.0.min.css" rel="stylesheet" type="text/css">
 <script src="jquery-mobile/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.3.0.min.js" type="text/javascript"></script>
@@ -20,7 +20,8 @@
 
   <div data-role="content">
     <div data-role="fieldcontain">
-		<button id="getLocationButton">Get Location</button>
+		<button id="startLocationButton">Update Location</button>
+        <button id="stopLocationButton">Stop Updates</button>
       	<label for="longtext">Longitude:</label>
       	<input type="text" name="longtext" id="longtext" value=""  />
       	<label for="lattext">Latitude:</label>
